<resources>
    <string name="app_name">Being Parents</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="diaper_size">Size</string>
    <string name="movers">Little Movers Weight</string>
    <string name="snuggler">Little Snugglers Weight</string>
    <string name="pamper_baby_dry">Baby Dry Weight</string>
    <string name="pamper_cruisers">Cruisers Weight</string>
    <string name="pamper_swaddlers">Swaddlers Weight</string>
    <string name="movers_size_1">Little Movers Size 3</string>
    <string name="movers_size_2">Little Movers Size 4</string>
    <string name="movers_size_3">Little Movers Size 5</string>
    <string name="movers_size_4">Little Movers Size 6</string>
    <string name="snuggler_size_1">Snugglers Preemie</string>
    <string name="snuggler_size_2">Snugglers Newborn</string>
    <string name="snuggler_size_3">Snugglers Size 1</string>
    <string name="snuggler_size_4">Snugglers Size 2</string>
    <string name="snuggler_size_5">Snugglers Size 3</string>
    <string name="snuggler_size_6">Snugglers Size 4</string>
    <string name="snuggler_size_7">Snugglers Size 5</string>
    <string name="dry_size_1">Snug and Dry Size 1</string>
    <string name="dry_size_2">Snug and Dry Size 2</string>
    <string name="dry_size_3">Snug and Dry Size 3</string>
    <string name="dry_size_4">Snug and Dry Size 4</string>
    <string name="dry_size_5">Snug and Dry Size 5</string>
    <string name="dry_size_6">Snug and Dry Size 6</string>
    <string name="pampers_size_1">Baby Dry Size 1</string>
    <string name="pampers_size_2">Baby Dry Size 1–2</string>
    <string name="pampers_size_3">Baby Dry Size 2</string>
    <string name="pampers_size_4">Baby Dry Size 3</string>
    <string name="pampers_size_5">Baby Dry Size 4</string>
    <string name="pampers_size_6">Baby Dry Size 5</string>
    <string name="pampers_size_7">Baby Dry Size 6</string>
    <string name="pampers_cruisers_size_1">Cruisers Size 3</string>
    <string name="pampers_cruisers_size_2">Cruisers Size 4</string>
    <string name="pampers_cruisers_size_3">Cruisers Size 5</string>
    <string name="pampers_cruisers_size_4">Cruisers Size 6</string>
    <string name="pampers_cruisers_size_5">Cruisers Size 7</string>
    <string name="pampers_swaddlers_size_1">Swaddlers Preemie</string>
    <string name="pampers_swaddlers_size_2">Swaddlers Newborn</string>
    <string name="pampers_swaddlers_size_3">Swaddlers Size 1</string>
    <string name="pampers_swaddlers_size_4">Swaddlers Size 1–2</string>
    <string name="pampers_swaddlers_size_5">Swaddlers Size 2</string>
    <string name="pampers_swaddlers_size_6">Swaddlers Size 3</string>
    <string name="congratulations_text">Congratulations</string>
    <string name="development_task_completed_body">All required tasks have been completed</string>
    <string name="pending_task_head">No task completed</string>
    <string name="pending_task_incomplete_body">Click on tasks to edit</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="blank_string" />
    <string name="title_activity_handling_new_born">Handling Newborn</string>
    <string name="guidamnce_handling_point_1">Wash your hands (or use a hand sanitizer) before handling your baby.</string>
    <string name="guidamnce_handling_point_detail_1">Newborns don\'t have a strong immune system yet, so they are susceptible to infection. Make sure that everyone who handles your baby has clean hands.</string>
    <string name="guidamnce_handling_point_2">Be careful to support your baby\'s head and neck.</string>
    <string name="guidamnce_handling_point_detail_2">Cradle the head when carrying your baby and support the head when carrying the baby upright or when you lay your baby down.</string>
    <string name="guidamnce_handling_point_3">Be careful not to shake your newborn.</string>
    <string name="guidamnce_handling_point_detail_3">Shaking that is : moving vigorously can cause bleeding in the brain and even death. If you need to wake your infant, don\'t do it by shaking - instead, tickle your baby\'s feet or blow gently on a cheek.</string>
    <string name="guidamnce_handling_point_4">Rough play</string>
    <string name="guidamnce_handling_point_detail_4">Do not play rough, such as being jiggled on the knee or thrown in the air may be dangerous to baby.</string>
    <string name="title_activity_guidance_soothing_main">Why is my baby crying?</string>
    <string name="guidance_soothing_intro">Usually there’s a reason because of which baby is crying. Remember, when something is bothering your baby, your baby doesn’t have any way to communicate besides crying.</string>
    <string name="guidance_soothing_cause_1">Dirty diaper?</string>
    <string name="guidance_soothing_cause_detail_1">Ckech wether the diaper needs to be changed or adjusted?</string>
    <string name="guidance_soothing_cause_2">Needs to burp?</string>
    <string name="guidance_soothing_cause_detail_2">Try the different positions outlined in the burping section.</string>
    <string name="guidance_soothing_cause_3">Gas?</string>
    <string name="guidance_soothing_cause_detail_3">Try laying your baby on her back and then moving her legs and hips up and down like she’s riding a bicycle.</string>
    <string name="guidance_soothing_cause_4">Physical discomfort?</string>
    <string name="guidance_soothing_cause_detail_4">Is the baby too hot or cold? Is there something on the baby that’s too tight or scratchy.</string>
    <string name="guidance_soothing_cause_5">Lonely?</string>
    <string name="guidance_soothing_cause_detail_5">If she wakes up and no one is around, she might cry out for some company and just want to be held.</string>
    <string name="guidance_soothing_cause_6">Hungry?</string>
    <string name="guidance_soothing_cause_detail_6">Hand her over to mom for some feeding.</string>
    <string name="guidance_soothing_cause_7">Fever?</string>
    <string name="guidance_soothing_cause_detail_7">An easy-to-use forehead thermometer is a must for when you have a baby. If the reading says she’s running a temperature, you can give her some acetaminophen. Be sure to check with you doctor for the right dosage.</string>
    <string name="guidance_soothing_cause_8">Need sleep?</string>
    <string name="guidance_soothing_cause_detail_8">Check whether the baby is sleepy? If so, make proper arrangements for the baby to sleep.</string>
    <string name="guidance_soothing_cause_9">Too much stimulus?</string>
    <string name="guidance_soothing_cause_detail_9">Some babies can be unusually sensitive to touch, light, or sound, and might startle and cry easily, sleep less than expected. If that\'s the case with your baby, keep noise and light levels low to moderate.</string>
    <string name="guidance_soothing_remedies_intro">Here are some potential soothers</string>
    <string name="guidance_soothing_remedies_1">Pacifier</string>
    <string name="guidance_soothing_remedies_detail_1">Not all babies take to the pacifier, and there are pros and cons to using one, but they can definitely work wonders for some baby. Remove the pacifier once baby sleep.</string>
    <string name="guidance_soothing_remedies_2">Put the baby in a motorized swing</string>
    <string name="guidance_soothing_remedies_detail_2">Can work in some baby.</string>
    <string name="guidance_soothing_remedies_3">Swaddle</string>
    <string name="guidance_soothing_remedies_detail_3">Babies like being tightly wrapped - it reminds them of being back in the womb. Swaddling a baby using a blanket is pretty simple. Don’t try this in baby more than three months. Proper swaddling keeps a baby\'s arms close to the body while allowing for some movement of the legs. Not only does swaddling keep a baby warm, but it seems to give most newborns a sense of security and comfort. Swaddling also may help limit the startle reflex, which can wake a baby.</string>
    <string name="guidance_soothing_remedies_4">Run the vacuum</string>
    <string name="guidance_soothing_remedies_detail_4">The womb was a surprisingly loud place, so replicating that kind of noise can put your baby at ease. Running your vacuum next to them can be amazingly effective.</string>
    <string name="guidance_soothing_remedies_5">Vocal sounds and music</string>
    <string name="guidance_soothing_remedies_detail_5">Babies usually love vocal sounds, such as talking, babbling, singing, and cooing. Your baby will probably also love listening to music. Baby rattles and musical mobiles are other good ways to stimulate your infant\'s hearing. If your little one is being fussy, try singing, reciting poetry and nursery rhymes, or reading aloud as you sway or rock your baby gently in a chair.</string>
    <string name="guidance_soothing_remedies_warning">If above remedies don’t work and baby continue to cry without any cause; consult your doctor. Remember inconsolable cry can be a danger sign and need evaluation from doctor</string>
    <string name="hand_wash_guide_11">Your hands are now safe</string>
    <string name="hand_wash_guide_10">Use towel to turn of faucet</string>
    <string name="hand_wash_guide_9">Dry hand thoroughly with a single use towel</string>
    <string name="hand_wash_guide_8">Rinse hands with water</string>
    <string name="hand_wash_guide_7">Rotational rubbing back and forth with clasped fingers in palm</string>
    <string name="hand_wash_guide_6">Rotational rubbing of left thumb clasped in right palm and vice versa</string>
    <string name="hand_wash_guide_5">Back of fingers to opposing palms with fingers interlocked</string>
    <string name="hand_wash_guide_4">Palm to palm with interlaced fingers</string>
    <string name="hand_wash_guide_3">Right palm over left dorsum with interlaced fingers</string>
    <string name="hand_wash_guide_2">Rub hands palm to palm</string>
    <string name="hand_wash_guide_1">Apply enough soap to cover all hand surfaces</string>
    <string name="hand_wash_guide_0">Wet hands with water</string>
    <string name="wash_hands_header_text_2">Duration of entire process :</string>
    <string name="wash_hands_header_text_1">Wash hands when visibly soiled ! otherwise, use handrub</string>
    <string name="wash_hands_header_text_3">40 - 60 Seconds</string>
    <string name="guidance_swadle_header">Carefully follow the following guidelines to swaddle your baby</string>
    <string name="guidance_swadle_text_1">Spread out the receiving blanket, with one corner folded over slightly.</string>
    <string name="guidance_swadle_text_2">Lay the baby face-up on the blanket with his or her head above the folded corner.</string>
    <string name="guidance_swadle_text_3">Bring the bottom corner up over the baby\'s feet and pull it toward the head, folding the fabric down if it gets close to the face. Be sure not to wrap too tightly around the hips. Hips and knees should be slightly bent and turned out. Wrapping your baby too tightly may increase the chance of hip dysplasia.</string>
    <string name="guidance_swadle_text_4">Wrap the right corner around the baby, and tuck it under the baby\'s back on the left side, leaving only the neck and head exposed.</string>
    <string name="guidance_swadle_text_5">To make sure your baby is not wrapped too tight, make sure you can slip a hand between the blanket and your baby\'s chest, which will allow comfortable breathing. Make sure, however, that the blanket is not so loose that it could become undone.</string>
    <string name="guidance_swadle_text_6_warning">Babies should not be swaddled after they\'re 2 months old. At this age, some babies can roll over while swaddled, which increases their risk of sudden infant death syndrome (SIDS).</string>
    <string name="title_activity_diaper_main">Diaper</string>
</resources>