<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp">

        <TextView
            android:id="@+id/textView45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:padding="5dp"
            android:text="@string/guidance_soothing_intro"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView45"
            android:gravity="center"
            android:padding="5dp"
            android:text="•"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView46"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView45"
            android:layout_toEndOf="@+id/textView42"
            android:layout_toRightOf="@+id/textView42"
            android:padding="5dp"
            android:text="@string/guidance_soothing_cause_1"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView46"
            android:layout_alignStart="@+id/textView46"
            android:layout_below="@+id/textView46"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:text="@string/guidance_soothing_cause_detail_1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView47"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView34"
            android:gravity="center"
            android:padding="5dp"
            android:text="•"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView48"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView34"
            android:layout_alignLeft="@+id/textView34"
            android:layout_alignRight="@+id/textView34"
            android:layout_alignStart="@+id/textView34"
            android:layout_alignTop="@+id/textView47"
            android:padding="5dp"
            android:text="@string/guidance_soothing_cause_2"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView49"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView48"
            android:layout_toEndOf="@+id/textView47"
            android:layout_toRightOf="@+id/textView47"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:text="@string/guidance_soothing_cause_detail_2"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/textView50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView49"
            android:gravity="center"
            android:padding="5dp"
            android:text="•"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView51"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView49"
            android:layout_alignLeft="@+id/textView49"
            android:layout_alignRight="@+id/textView49"
            android:layout_alignStart="@+id/textView49"
            android:layout_below="@+id/textView49"
            android:padding="5dp"
            android:text="@string/guidance_soothing_cause_3"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView52"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView51"
            android:layout_alignStart="@+id/textView51"
            android:layout_below="@+id/textView51"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:text="@string/guidance_soothing_cause_detail_3"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/textView53"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView52"
            android:gravity="center"
            android:padding="5dp"
            android:text="•"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView54"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView52"
            android:layout_alignRight="@+id/textView52"
            android:layout_below="@+id/textView52"
            android:layout_toRightOf="@+id/textView53"
            android:padding="5dp"
            android:text="@string/guidance_soothing_cause_4"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView55"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView54"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignStart="@+id/textView54"
            android:layout_below="@+id/textView54"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:text="@string/guidance_soothing_cause_detail_4"
            android:textSize="16sp"
             />

        <TextView
            android:id="@+id/textView56"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView55"
            android:gravity="center"
            android:padding="5dp"
            android:text="•"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView57"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView55"
            android:layout_alignLeft="@+id/textView55"
            android:layout_alignRight="@+id/textView55"
            android:layout_alignStart="@+id/textView55"
            android:layout_below="@+id/textView55"
            android:padding="5dp"
            android:text="@string/guidance_soothing_cause_5"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView58"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView57"
            android:layout_alignLeft="@+id/textView57"
            android:layout_alignRight="@+id/textView57"
            android:layout_alignStart="@+id/textView57"
            android:layout_below="@+id/textView57"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:text="@string/guidance_soothing_cause_detail_5"
            android:textSize="16sp"
             />

        <TextView
            android:id="@+id/textView59"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView58"
            android:gravity="center"
            android:padding="5dp"
            android:text="•"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView60"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView58"
            android:layout_alignLeft="@+id/textView58"
            android:layout_alignRight="@+id/textView58"
            android:layout_alignStart="@+id/textView58"
            android:layout_below="@+id/textView58"
            android:padding="5dp"
            android:text="@string/guidance_soothing_cause_6"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView61"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView60"
            android:layout_alignStart="@+id/textView60"
            android:layout_below="@+id/textView60"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:text="@string/guidance_soothing_cause_detail_6"
            android:textSize="16sp"
           />

        <TextView
            android:id="@+id/textView62"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView61"
            android:gravity="center"
            android:padding="5dp"
            android:text="•"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView63"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView61"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignStart="@+id/textView61"
            android:layout_alignTop="@+id/textView62"
            android:padding="5dp"
            android:text="@string/guidance_soothing_cause_7"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView64"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView63"
            android:layout_alignLeft="@+id/textView63"
            android:layout_alignRight="@+id/textView63"
            android:layout_alignStart="@+id/textView63"
            android:layout_below="@+id/textView63"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:text="@string/guidance_soothing_cause_detail_7"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/textView65"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView64"
            android:gravity="center"
            android:padding="5dp"
            android:text="•"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView66"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView64"
            android:layout_alignLeft="@+id/textView64"
            android:layout_alignRight="@+id/textView64"
            android:layout_alignStart="@+id/textView64"
            android:layout_below="@+id/textView64"
            android:padding="5dp"
            android:text="@string/guidance_soothing_cause_8"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView67"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView66"
            android:layout_alignStart="@+id/textView66"
            android:layout_below="@+id/textView66"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:text="@string/guidance_soothing_cause_detail_8"
            android:textSize="16sp"
             />

        <TextView
            android:id="@+id/textView68"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView67"
            android:gravity="center"
            android:padding="5dp"
            android:text="•"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView69"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView67"
            android:layout_alignRight="@+id/textView67"
            android:layout_below="@+id/textView67"
            android:layout_toRightOf="@+id/textView68"
            android:padding="5dp"
            android:text="@string/guidance_soothing_cause_9"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView70"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView69"
            android:layout_alignStart="@+id/textView69"
            android:layout_below="@+id/textView69"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:text="@string/guidance_soothing_cause_detail_9"
            android:textSize="16sp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView70" />
    </RelativeLayout>
</ScrollView>